````mermaid
classDiagram
    class SilabsTracer {
        +static SilabsTracer& Instance()
        +CHIP_ERROR Init()
        +CHIP_ERROR StartWatermarksStorage(PersistentStorageDelegate* storage)
        +void TimeTraceBegin(TimeTraceOperation aOperation)
        +void TimeTraceEnd(TimeTraceOperation aOperation, CHIP_ERROR error = CHIP_NO_ERROR)
        +void TimeTraceInstant(TimeTraceOperation aOperation, CHIP_ERROR error = CHIP_NO_ERROR)
        +CHIP_ERROR OutputTimeTracker(const TimeTracker& tracker)
        +CHIP_ERROR OutputWaterMark(TimeTraceOperation aOperation)
        +CHIP_ERROR OutputAllWaterMarks()
        +CHIP_ERROR TraceBufferFlushAll()
        +CHIP_ERROR TraceBufferFlushByOperation(TimeTraceOperation aOperation)
        +TimeTracker GetTimeTracker(TimeTraceOperation aOperation)
        +Watermark GetWatermark(TimeTraceOperation aOperation)
        +CHIP_ERROR SaveWatermarks()
        +CHIP_ERROR LoadWatermarks()
        +CHIP_ERROR GetTraceCount(size_t& count) const
        +CHIP_ERROR GetTraceByIndex(size_t index, const char*& trace) const
        -void TraceBufferClear()
        -CHIP_ERROR OutputTrace(const TimeTracker& tracker)
        -static SilabsTracer sInstance
        -TimeTrackerList mTimeTrackerList
        -TimeTracker mLatestTimeTrackers[kNumTraces]
        -Watermark mWatermarks[kNumTraces]
        -PersistentStorageDelegate* mStorage
        -size_t mBufferedTrackerCount
    }

    class TimeTracker {
        +System::Clock::Milliseconds32 mStartTime
        +System::Clock::Milliseconds32 mEndTime
        +TimeTraceOperation mOperation
        +OperationType mType
        +CHIP_ERROR mError
    }

    class Watermark {
        +System::Clock::Milliseconds32 mMovingAverage
        +System::Clock::Milliseconds32 mMaxTimeMs
        +System::Clock::Milliseconds32 mMinTimeMs
        +uint32_t mTotalCount
        +uint32_t mSuccessfullCount
        +uint32_t mCountAboveAvg
    }

    class TimeTrackerList {
        +chip::SingleLinkedListNode* head
        +void Insert(const TimeTracker& tracker)
        +void Remove(size_t index)
    }

    class SingleLinkedListNode {
        +TimeTracker mValue
        +SingleLinkedListNode* mpNext
    }

    SilabsTracer --> TimeTracker
    SilabsTracer --> Watermark
    SilabsTracer --> TimeTrackerList
    TimeTrackerList --> SingleLinkedListNode
    SingleLinkedListNode --> TimeTracker
```mermaid
````
